[package]
name = "rigid_body_2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
find_folder = "0.3.0"
glam = "0.23.0"
graphics = "0.0.0"
lazy-st = "0.2.2"
piston2d-opengl_graphics = "0.82.0"
piston_window = "0.128.0"
rand = "0.8.5"
